fix: avoid zoom in on ios

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -525,6 +525,14 @@ input[type='search'] {
   appearance: none;
 }
 
+@media screen and (max-width: 767px) {
+  input,
+  select,
+  textarea {
+    font-size: 16px !important;
+  }
+}
+
 input[type='search']::-webkit-search-decoration,
 input[type='search']::-webkit-search-cancel-button,
 input[type='search']::-webkit-search-results-button,
